--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Input]
-Pos=181,81
+Pos=253,45
 Size=142,48
+Collapsed=0
+
+[Window][Map editor]
+Pos=47,299
+Size=315,54
 Collapsed=0
 
