Add intra connections

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,6 +10,11 @@ Collapsed=0
 
 [Window][Map editor]
 Pos=47,464
-Size=426,78
+Size=469,138
+Collapsed=0
+
+[Window][Connection status]
+Pos=472,49
+Size=161,220
 Collapsed=0
 
