Squashed the bugs

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,17 @@ Size=142,48
 Collapsed=0
 
 [Window][Map editor]
-Pos=47,464
-Size=469,138
+Pos=46,486
+Size=779,198
 Collapsed=0
 
 [Window][Connection status]
-Pos=472,49
+Pos=500,47
 Size=161,220
+Collapsed=0
+
+[Window][Road status]
+Pos=501,274
+Size=160,141
 Collapsed=0
 
