so many bugs...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,12 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "cstring": "cpp"
+        "cstring": "cpp",
+        "any": "cpp",
+        "codecvt": "cpp",
+        "forward_list": "cpp",
+        "filesystem": "cpp",
+        "iomanip": "cpp",
+        "valarray": "cpp"
     }
 }
