--- a/imgui.ini
+++ b/imgui.ini
@@ -3,28 +3,23 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Input]
-Pos=253,45
-Size=142,48
+[Window][Road status##Default]
+Pos=434,490
+Size=32,32
 Collapsed=0
 
-[Window][Map editor]
-Pos=33,493
-Size=776,198
+[Window][Action##Default]
+Pos=498,93
+Size=136,77
 Collapsed=0
 
-[Window][Connection status]
-Pos=501,47
-Size=307,288
+[Window][Connection status##Default]
+Pos=564,247
+Size=128,277
 Collapsed=0
 
-[Window][Road status]
-Pos=500,346
-Size=160,141
-Collapsed=0
-
-[Window][Action]
-Pos=670,349
-Size=222,54
+[Window][Map editor##Default]
+Pos=56,502
+Size=109,54
 Collapsed=0
 
