Fixed some things and broke some things

--- a/imgui.ini
+++ b/imgui.ini
@@ -29,7 +29,12 @@ Size=235,157
 Collapsed=0
 
 [Window][Map input]
-Pos=50,560
-Size=109,95
+Pos=47,586
+Size=142,95
+Collapsed=0
+
+[Window][Tilemap]
+Pos=205,586
+Size=226,159
 Collapsed=0
 
