Test some stuffs

--- a/mapmaker.ini
+++ b/mapmaker.ini
@@ -14,12 +14,17 @@ Size=315,277
 Collapsed=0
 
 [Window][Road status##Default]
-Pos=500,350
+Pos=500,336
 Size=144,138
 Collapsed=0
 
 [Window][Action##Default]
-Pos=660,350
+Pos=655,337
 Size=153,77
+Collapsed=0
+
+[Window][Parent Window]
+Pos=198,191
+Size=216,235
 Collapsed=0
 
