add visualization - traffic node

--- a/mapmaker.ini
+++ b/mapmaker.ini
@@ -4,8 +4,8 @@ Size=402,178
 Collapsed=0
 
 [Window][Map editor##Default]
-Pos=46,492
-Size=786,191
+Pos=45,477
+Size=786,214
 Collapsed=0
 
 [Window][Connection status##Default]
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Road status##Default]
 Pos=500,336
-Size=144,138
+Size=144,135
 Collapsed=0
 
 [Window][Action##Default]
@@ -44,7 +44,12 @@ Size=166,81
 Collapsed=0
 
 [Window][Add traffic participants]
-Pos=205,240
+Pos=214,261
 Size=195,127
+Collapsed=0
+
+[Window][Test field]
+Pos=60,60
+Size=216,185
 Collapsed=0
 
